--- a/src/main/java/com/mycompany/visao/consultor/CadConsultor.form
+++ b/src/main/java/com/mycompany/visao/consultor/CadConsultor.form
@@ -126,6 +126,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfId">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfNome">
         </Component>
@@ -179,12 +182,7 @@
             <Property name="text" type="java.lang.String" value="Data Termino"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JFormattedTextField" name="tfPreco">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format subtype="0" type="0"/>
-            </Property>
-          </Properties>
+        <Component class="javax.swing.JTextField" name="tfPreco">
         </Component>
       </SubComponents>
     </Container>
