--- a/src/main/java/com/mycompany/visao/outros/TelaAlteracaoSenha.form
+++ b/src/main/java/com/mycompany/visao/outros/TelaAlteracaoSenha.form
@@ -153,6 +153,9 @@
               <Font name="Sitka Small" size="14" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="pfConfirmacaoSenhaKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnConfirmar">
           <Properties>
@@ -163,6 +166,7 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConfirmarActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnConfirmarKeyPressed"/>
           </Events>
         </Component>
       </SubComponents>
