--- a/src/main/java/com/mycompany/visao/outros/TelaLogin.form
+++ b/src/main/java/com/mycompany/visao/outros/TelaLogin.form
@@ -177,6 +177,7 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEntrarActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnEntrarKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -205,6 +206,9 @@
               <Font name="Sitka Small" size="14" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="pfSenhaKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
