--- a/src/main/java/com/mycompany/visao/pedido/ListPedido.form
+++ b/src/main/java/com/mycompany/visao/pedido/ListPedido.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -93,19 +93,84 @@
         <Component class="javax.swing.JTable" name="tablePedido">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="11" rowCount="4">
+              <Table columnCount="12" rowCount="4">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
-                <Column editable="false" title="CIDADE" type="java.lang.Object"/>
-                <Column editable="false" title="RUA" type="java.lang.Object"/>
-                <Column editable="false" title="CEP" type="java.lang.Object"/>
-                <Column editable="false" title="N&#xda;M. RESIDENCIA" type="java.lang.Object"/>
-                <Column editable="false" title="NOME" type="java.lang.Object"/>
-                <Column editable="false" title="SOBRENOME" type="java.lang.Object"/>
-                <Column editable="false" title="GENERO" type="java.lang.Object"/>
-                <Column editable="false" title="TELEFONE" type="java.lang.Object"/>
-                <Column editable="false" title="EMAIL" type="java.lang.Object"/>
-                <Column editable="false" title="ESTADO CIVIL" type="java.lang.Object"/>
+                <Column editable="false" title="DATA" type="java.lang.Object"/>
+                <Column editable="false" title="NUMERO" type="java.lang.Object"/>
+                <Column editable="false" title="ESCOPO" type="java.lang.Object"/>
+                <Column editable="false" title="PRAZO" type="java.lang.Object"/>
+                <Column editable="false" title="FORMA PAGTO" type="java.lang.Object"/>
+                <Column editable="false" title="VALOR PROJETO" type="java.lang.Object"/>
+                <Column editable="false" title="CUSTO FIXO" type="java.lang.Object"/>
+                <Column editable="false" title="CUSTO ADVERSO" type="java.lang.Object"/>
+                <Column editable="false" title="TOTAL" type="java.lang.Object"/>
+                <Column editable="false" title="SUB TOTAL DESPESAS" type="java.lang.Object"/>
+                <Column editable="false" title="SUB TOTAL LIQUIDO" type="java.lang.Object"/>
               </Table>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
