--- a/src/main/java/com/mycompany/visao/pedido/ListPedido.form
+++ b/src/main/java/com/mycompany/visao/pedido/ListPedido.form
@@ -93,11 +93,13 @@
         <Component class="javax.swing.JTable" name="tablePedido">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="12" rowCount="4">
+              <Table columnCount="14" rowCount="4">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="DATA" type="java.lang.Object"/>
-                <Column editable="false" title="NUMERO" type="java.lang.Object"/>
-                <Column editable="false" title="ESCOPO" type="java.lang.Object"/>
+                <Column editable="false" title="VENDEDOR" type="java.lang.Object"/>
+                <Column editable="false" title="INSTITUTO" type="java.lang.Object"/>
+                <Column editable="false" title="CLIENTE" type="java.lang.Object"/>
+                <Column editable="false" title="NUMERO PROJETO" type="java.lang.Object"/>
                 <Column editable="false" title="PRAZO" type="java.lang.Object"/>
                 <Column editable="false" title="FORMA PAGTO" type="java.lang.Object"/>
                 <Column editable="false" title="VALOR PROJETO" type="java.lang.Object"/>
@@ -110,6 +112,16 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
