--- a/src/main/java/com/mycompany/visao/pedido/CadPedido.form
+++ b/src/main/java/com/mycompany/visao/pedido/CadPedido.form
@@ -156,13 +156,13 @@
                                   <EmptySpace min="-2" pref="234" max="-2" attributes="0"/>
                                   <Component id="jLabel27" min="-2" pref="72" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="tfVendedor" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tfVendedor" min="-2" pref="80" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="tfInstituto" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tfInstituto" min="-2" pref="80" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="tfEmpresa" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tfEmpresa" min="-2" pref="80" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="tfFormaPagamento" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tfFormaPagamento" min="-2" pref="80" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -719,6 +719,9 @@
         <Component class="javax.swing.JTextField" name="tfInstituto">
         </Component>
         <Component class="javax.swing.JTextField" name="tfEmpresa">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfEmpresaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tfFormaPagamento">
         </Component>
@@ -726,6 +729,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Excluir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExcluirActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnInserirConsultor">
           <Properties>
